# lmi-calculator

./: pyproject.toml
lmi_calculator/: __main__.py  calculator.py
